--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 :root {
-    --cor-fundo: #01080E;
-    --cor-principal: #0B0D20;
-    --cor-secundaria: #212333;
-    --cor-destaque: #2BDEFD;
+    --cor-fundo: #000000;
+    --cor-principal: #910049;
+    --cor-secundaria: #da059a;
+    --cor-destaque: #a58b9f;
     --cor-texto: #D7F9FF;
 }
 
